# xg-glass-sample-android-phone

./: .gitignore  README.md  VIBE_CODING.md  build.gradle.kts  pyproject.toml  settings.gradle.kts  xg-glass
app/: build.gradle.kts
app-contract/: build.gradle.kts
app/src/main/: AndroidManifest.xml
build-logic/: build.gradle.kts  settings.gradle.kts
core/: build.gradle.kts
device-frame-embedded/: build.gradle.kts
device-frame-flutter/: build.gradle.kts
device-rayneo-installer/: build.gradle.kts
device-rayneo-installer/src/main/: AndroidManifest.xml
device-rayneo-runtime/: build.gradle.kts
device-rokid/: build.gradle.kts
devices/device-frame-embedded/: build.gradle.kts
devices/device-frame-flutter/: build.gradle.kts
devices/device-meta/: build.gradle.kts
devices/device-omi/: README.md  build.gradle.kts
devices/device-phoneglasses/: build.gradle.kts
devices/device-rayneo-installer/: build.gradle.kts
devices/device-rayneo-runtime/: build.gradle.kts
devices/device-rokid/: build.gradle.kts
devices/device-sim-emulator/: build.gradle.kts
devices/device-simulator/: build.gradle.kts
frame_module/: README.md  pubspec.yaml
frame_module/assets/lua/: data.min.lua  plain_text.min.lua  ug_frame_app.lua
frame_module/lib/: main.dart  universal_frame_bridge.dart
gradle/: libs.versions.toml
templates/kotlin-app/: README.md  settings.gradle.kts  xg-glass.yaml
templates/kotlin-app/app/: build.gradle.kts
templates/kotlin-app/gradle/: libs.versions.toml
tools/xg_glass_cli/: README.md  cli.py
universal/: build.gradle.kts
(+43 files in other folders)
