[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xg-glass-sdk"
version = "0.1.0"
description = "xg-glass SDK CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["yt-dlp"]

[project.scripts]
xg-glass = "tools.xg_glass_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools", "tools.*"]
